--- a/buildpack.toml
+++ b/buildpack.toml
@@ -15,7 +15,7 @@
 [buildpack]
 id = "org.cloudfoundry.archiveexpanding"
 name = "Cloud Foundry Archive Expanding Buildpack"
-version = "1.0.0-BUILD-SNAPSHOT"
+version = "1.0.0-RC01"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
