--- a/buildpack.toml
+++ b/buildpack.toml
@@ -17,7 +17,7 @@ api = "0.2"
 [buildpack]
 id      = "org.cloudfoundry.archiveexpanding"
 name    = "Cloud Foundry Archive Expanding Buildpack"
-version = "1.0.0-BUILD-SNAPSHOT"
+version = "{{.Version}}"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
